# sheet-sql

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml  tasks.py
.github/workflows/: ci.yaml  coverage.yaml  coverage.yml  release.yml  test-pypi.yaml
docs/: api.rst  conf.py  index.rst
src/sheetsql/: __init__.py  connection.py  exceptions.py  spreadsheet.py  utils.py  worksheet.py
tests/: __init__.py  conftest.py  mocks.py  test_sheetsql.py
tests/sample_response/: invalid_query_response.txt  valid_query_response.txt
